Made all the interactive painting tools threading-friendly

Ported most of the painting tools to strokes, they use FreehandStroke
for executing their jobs:
- KisToolLine
- KisToolRectangle
- KisToolEllipse
- KisToolPolygon
- KisToolPolyline
- KisToolStar
- KisToolPath

Wrapped three complex tools into macros to block the UI when some
action is in porgress:
- KisToolTransform
- KisToolFill
- KisToolGradient

BUG:290683