krita/plugins/tools/defaulttools/kis_tool_gradient.cc
@@ -264,8 +264,11 @@ void KisToolGradient::mouseReleaseEvent(KoPointerEvent *event)
         if (currentImage() && (device = currentNode()->paintDevice())) {
             qApp->setOverrideCursor(Qt::BusyCursor);
 
+            KisUndoAdapter *undoAdapter = image()->undoAdapter();
+            undoAdapter->beginMacro(i18n("Gradient"));
+
             KisGradientPainter painter(device, currentSelection());
-            painter.beginTransaction(i18n("Gradient"));
+            painter.beginTransaction("");
             setupPainter(&painter);
 
             KisCanvas2 * canvas = dynamic_cast<KisCanvas2 *>(this->canvas());
@@ -275,7 +278,8 @@ void KisToolGradient::mouseReleaseEvent(KoPointerEvent *event)
             painter.setProgress(updater->startSubtask());
 
             painter.paintGradient(m_startPos, m_endPos, m_shape, m_repeat, m_antiAliasThreshold, m_reverse, 0, 0, currentImage()->width(), currentImage()->height());
-            painter.endTransaction(image()->undoAdapter());
+            painter.endTransaction(undoAdapter);
+            undoAdapter->endMacro();
 
             qApp->restoreOverrideCursor();
             currentNode()->setDirty();
