krita/ui/tool/strokes/freehand_stroke.h
@@ -37,7 +37,12 @@ public:
         enum DabType {
             POINT,
             LINE,
-            CURVE
+            CURVE,
+            POLYLINE,
+            POLYGON,
+            RECT,
+            ELLIPSE,
+            PAINTER_PATH
         };
 
         Data(KisNodeSP _node, PainterInfo *_painterInfo,
@@ -63,6 +68,27 @@ public:
               control1(_control1), control2(_control2)
         {}
 
+        Data(KisNodeSP _node, PainterInfo *_painterInfo,
+             DabType _type,
+             const vQPointF &_points)
+            : node(_node), painterInfo(_painterInfo),
+            type(_type), points(_points)
+        {}
+
+        Data(KisNodeSP _node, PainterInfo *_painterInfo,
+             DabType _type,
+             const QRectF &_rect)
+            : node(_node), painterInfo(_painterInfo),
+            type(_type), rect(_rect)
+        {}
+
+        Data(KisNodeSP _node, PainterInfo *_painterInfo,
+             DabType _type,
+             const QPainterPath &_path)
+            : node(_node), painterInfo(_painterInfo),
+            type(_type), path(_path)
+        {}
+
 
         KisNodeSP node;
         PainterInfo *painterInfo;
@@ -72,6 +98,10 @@ public:
         KisPaintInformation pi2;
         QPointF control1;
         QPointF control2;
+
+        vQPointF points;
+        QRectF rect;
+        QPainterPath path;
     };
 
 public:
